--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - master
       - develop
+  pull_request:
+    branches:
+      - master
 jobs:
   CI:
     runs-on: ubuntu-latest
