--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,6 @@ jobs:
           npm run check-types
           npm test
           npm run eslint:test
+      
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
