--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Setup Node version
-        uses: action/set-up-node@v3
+        uses: action/setup-node@v3
         with:
           node-version: 18
 
